2008-06-13  Patrick Spendrin    <ps_ml@gmx.de>

    * src/lib/PluginManager.cpp

    make the output of the pluginmanager usable

2008-06-13  Patrick Spendrin    <ps_ml@gmx.de>

    * CMakeLists.txt
    * MarbleMacros.cmake
    * src/plugins/designer/marblewidget/CMakeLists.txt
    * src/plugins/designer/navigator/CMakeLists.txt
    * src/plugins/marble/compass/CMakeLists.txt
    * src/plugins/marble/overviewmap/CMakeLists.txt
    * src/plugins/marble/satellites/CMakeLists.txt
    * src/plugins/marble/stars/CMakeLists.txt
    * src/plugins/marble/test/CMakeLists.txt

    add new cmake macros to make the building of marble plugins easier

2008-06-10  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/CMakeLists.txt:

    Missing export was fixed by mlaurent, so revert the last change.

2008-06-10  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/CMakeLists.txt:

    Disable making of src/lib/tests because of link failure on linux.

2008-06-09  Patrick Spendrin    <ps_ml@gmx.de>

    * CMakeLists.txt
    * src/lib/CMakeLists.txt
    * src/lib/tests/CMakeLists.txt
    * src/lib/tests/PluginManagerTest.cpp

    add first Unittest for the PluginManager (which currently fails under 
    Windows)

2008-06-09  Patrick Spendrin    <ps_ml@gmx.de>

    * src/plugins/designer/marblewidget/CMakeLists.txt
    * src/plugins/designer/navigator/CMakeLists.txt
    * src/plugins/marble/compass/CMakeLists.txt
    * src/plugins/marble/overviewmap/CMakeLists.txt
    * src/plugins/marble/satellites/CMakeLists.txt
    * src/plugins/marble/stars/CMakeLists.txt
    * src/plugins/marble/test/CMakeLists.txt
    
    fix some issues in build system

2008-06-09  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/geodata/handlers/kml/KmlColorModeTagHandler.cpp

    Fix compilation on Linux.

2008-06-09  Patrick Spendrin    <ps_ml@gmx.de>

    * KmlAreaTagHandler.{h|cpp}
    * KmlColorModeTagHandler.{h|cpp}
    * KmlColorTagHandler.{h|cpp}
    * KmlCoordinatesTagHandler.{h|cpp}